@@ -451,6 +451,8 @@ FIELD		|smtp_helo	|t_varchar(255)	|''	|NOT NULL	|ZBX_SYNC
 FIELD		|smtp_email	|t_varchar(255)	|''	|NOT NULL	|ZBX_SYNC
 FIELD		|exec_path	|t_varchar(255)	|''	|NOT NULL	|ZBX_SYNC
 FIELD		|gsm_modem	|t_varchar(255)	|''	|NOT NULL	|ZBX_SYNC
+FIELD		|username	|t_varchar(255)	|''	|NOT NULL	|ZBX_SYNC
+FIELD		|passwd		|t_varchar(255)	|''	|NOT NULL	|ZBX_SYNC
 
 TABLE|profiles|profileid|ZBX_SYNC
 FIELD		|profileid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
